# MPR-Labs

./: CMakeLists.txt  main.c  run_lab01.sh  run_lab03.sh  run_lab03_2.sh  run_program.sh  run_program2.sh  run_prometheus.sh
lab01/: diff_variants.c  lab01.c
lab02/: montecarlo_square.c
lab03/: lehmer64.h  parallel_bucket_sort.c  paraller_for.c  paraller_for_static.c  sort_alg.c  sort_alg_seq.c
lab04/: CMakeLists.txt  algs.h  main.c  params.c  params.h  rand_arr.c  results.md  run.sh  sort_v1.c  sorts.c
lab05/: Cargo.toml  plotter.py  test.txt
lab05/src/: main.rs
lab06/: CMakeLists.txt  GpuTimer.cu  GpuTimer.h  Timer.h  Utility.cpp  Utility.h  Utility.hpp  args.h  args_parser.cpp  cpu_vec_add.cpp  cuda_vec_add.cu  main.cu  run.bat
lab06/results/: results_10_00-37-46.txt  results_10_01-09-54.txt
lab06/timers/: CMakeLists.txt.bck  CpuTimer.cpp  CpuTimer.hpp  GpuTimer.cu  GpuTimer.cuh  Timeit.cpp  Timeit.hpp  Timer.hpp
lab07/: BLOCK_SIZE.h  CMakeLists.txt  GpuTimer.cu  GpuTimer.h  arg_parser.cpp  args.h  image_scaling.cu  image_scaling2.cu  matrix_transpose.cu  matrix_transpose_2.cu  run.bat  run_scaling.bat  scrImagePgmPpmPackage.cpp
lab07/results/: results_transpose2_13_20-32-18.txt  results_transpose2_13_22-13-14.txt  results_transpose_13_20-32-18.txt  results_transpose_13_22-13-14.txt
lab08/: CMakeLists.txt
lab08/atomico_perations/: reduction.cu
lab08/histogram/: reduce.cu
lab08/reduction/: reduction_shared.cu
plotter/: plot_utils.py  plot_utils_lab01.py  plot_utils_lab02.py  plot_utils_lab03.py  plot_utils_lab04.py  plot_utils_lab04_2.py  plot_utils_lab06.py  plot_utils_lab07.py
util/: helpers.c  helpers.h
